--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -7,6 +7,7 @@
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 a {
